force-app/main/default/objects/Area__c/Area__c.object-meta.xml
<CustomObject>
    <description>In a City, how many hospitals are there</description>
    <label>City</label>
    <nameField>
        <label>Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>City</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>