force-app/main/default/objects/Area__c/fields/Active_Cases__c.field-meta.xml
<CustomField>
    <fullName>Active_Cases__c</fullName>
    <label>Active Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>