force-app/main/default/objects/Area__c/fields/recovered__c.field-meta.xml
<CustomField>
    <fullName>recovered__c</fullName>
    <description>total recovered</description>
    <label>recovered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>