force-app/main/default/objects/Area__c/fields/Total_fartality__c.field-meta.xml
<CustomField>
    <fullName>Total_fartality__c</fullName>
    <label>Total fartality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>