force-app/main/default/objects/Area__c/fields/Total_infected__c.field-meta.xml
<CustomField>
    <fullName>Total_infected__c</fullName>
    <description>Total infected patients in the city</description>
    <label>Total_infected</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>